...

  @override
  Widget build(BuildContext context) {
    final authController = Get.find<AuthenticationController>();

    return Scaffold(
      key: const Key('studentHomeScaffold'),
      backgroundColor: backgroundColor,
      body: SafeArea(
        child: Padding(
          padding: const EdgeInsets.symmetric(horizontal: 20.0),
          child: Column(
            crossAxisAlignment: CrossAxisAlignment.start,
...
                        fontWeight: FontWeight.bold,
                      ),
                    ),
                  ),

                  IconButton(
                    key: const Key('studentHomeLogoutButton'),
                    icon: const Icon(Icons.logout),
                    onPressed: () {
                      Get.defaultDialog(
                        title: "Cerrar sesión",
                        middleText: "¿Seguro que quieres cerrar sesión?",
                        textConfirm: "Sí",
...

              Expanded(
                child: Obx(() {
                  if (controller.isLoading.value) {
                    return const Center(
                      child: CircularProgressIndicator(
                        key: Key('studentHomeLoadingIndicator'),
                      ),
                    );
                  }

                  if (controller.cursos.isEmpty) {
                    return const Center(
...
